--- a/directors.html
+++ b/directors.html
@@ -5,6 +5,94 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bord Of Directors-LSF</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- NAVBAR SECTION -->
+<header class="custom-header">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
+      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
+
+      <!-- LSF Logo -->
+      <a class="navbar-brand me-auto" href="index.html">
+        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
+      </a>
+
+      <!-- Toggle Button -->
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible Menu -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
+          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- NAVBAR STYLE -->
+<style>
+  .navbar {
+    padding: 0.3rem 1rem;
+    backdrop-filter: blur(8px);
+  }
+
+  .navbar-collapse {
+    background: transparent !important;
+    box-shadow: none !important;
+    border-radius: 0 !important;
+    padding: 0 !important;
+    margin-top: 0 !important;
+  }
+
+  .navbar-nav {
+    background: transparent !important;
+    padding: 0 !important;
+    margin: 0 !important;
+  }
+
+  .navbar-nav .nav-link {
+    color: #333;
+    font-weight: 500;
+    padding: 0.5rem 1rem;
+    transition: color 0.2s ease;
+  }
+
+  .navbar-nav .nav-link:hover,
+  .navbar-nav .nav-link:focus {
+    color: #0d6efd;
+    text-decoration: underline;
+  }
+
+  .navbar-toggler {
+    border: none !important;
+    background: none !important;
+    box-shadow: none !important;
+  }
+
+  .navbar-toggler-icon {
+    filter: brightness(0.1);
+  }
+
+  @media (max-width: 991.98px) {
+    .navbar-nav {
+      gap: 0.25rem;
+    }
+
+    .navbar-nav .nav-item {
+      text-align: center;
+      width: 100%;
+    }
+  }
+</style>
+
   <style>
     /* === HERO BANNER === */
   .page-hero-image {
