--- a/index.html
+++ b/index.html
@@ -833,8 +833,7 @@
   </div>
 </section>
   <!-- Footer -->
-  <!-- ======= Footer ======= -->
-<footer class="footer-section text-white py-5">
+   <footer class="footer-section text-white py-5">
   <div class="container">
     <div class="row gy-4">
       
@@ -886,35 +885,97 @@
     </div>
   </div>
 </footer>
-<style>
+ <style>
   .footer-section {
   background-color: #01579b;
+  color: #ffffff;
+  font-family: 'Segoe UI', sans-serif;
+  padding: 60px 20px 30px;
 }
 
+/* Footer Links */
 .footer-link {
   color: #ffffff;
   text-decoration: none;
   font-size: 0.9rem;
+  transition: color 0.3s ease, transform 0.3s ease;
+  cursor: pointer;
 }
 
 .footer-link:hover {
+  color: #cce8ff;
+  transform: scale(1.05);
   text-decoration: underline;
 }
 
+/* Contact Text */
+.footer-section p {
+  margin-bottom: 0.3rem;
+  font-size: 0.9rem;
+}
+
+/* Footer Headings */
+.footer-section h6 {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+}
+
+/* Social Icons */
 .footer-icon {
   font-size: 1.2rem;
   color: white;
-  padding: 0.3rem 0.6rem;
-  border-radius: 5px;
-  transition: 0.3s ease;
+  padding: 0.4rem 0.6rem;
+  border-radius: 50%;
+  background-color: transparent;
+  transition: all 0.3s ease;
 }
 
 .footer-icon:hover {
   background-color: white;
   color: #01579b;
+  transform: scale(1.2);
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
-</style>
+/* Spacing for bottom row */
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  font-size: 0.85rem;
+}
+
+/* Responsive Tweaks for Phone */
+@media (max-width: 768px) {
+  .footer-section .row > div {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 1rem;
+    text-align: center;
+  }
+
+  .footer-icon {
+    margin: 0 6px;
+  }
+
+  .footer-bottom {
+    flex-direction: column;
+    gap: 8px;
+    text-align: center;
+  }
+
+  .footer-section .d-flex.justify-content-center {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 10px;
+    margin-top: 20px;
+  }
+}
+
+ </style>>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <script src="js/script.js"></script>
