--- a/about.html
+++ b/about.html
@@ -6,7 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   <!-- Swiper CSS -->
+   
+  <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   
@@ -154,6 +155,113 @@
 
 </head>
 <body>
+  <!-- NAVBAR SECTION -->
+<header class="custom-header">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
+      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
+
+      <!-- LSF Logo -->
+      <a class="navbar-brand me-auto" href="index.html">
+        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
+      </a>
+
+      <!-- Toggle Button -->
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible Menu -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
+          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- NAVBAR STYLE -->
+<!-- NAVBAR SECTION -->
+<header class="custom-header">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
+      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
+
+      <!-- LSF Logo -->
+      <a class="navbar-brand me-auto" href="index.html">
+        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
+      </a>
+
+      <!-- Toggle Button -->
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible Menu -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
+          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- NAVBAR STYLE -->
+<style>
+  .navbar-nav .nav-link {
+    color: #333;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 0.5rem;
+    transition: color 0.2s ease, transform 0.2s ease;
+  }
+
+  .navbar-nav .nav-link:hover {
+    color: #0d6efd;
+    transform: scale(1.07);
+  }
+
+  .navbar-brand img {
+    height: 40px;
+  }
+  .navbar-toggler:focus,
+  .navbar-toggler:active {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+
+  @media (max-width: 991.98px) {
+    .navbar {
+      border-radius: 0 0 20px 20px;
+    }
+
+    .navbar-nav {
+      flex-direction: column;
+      align-items: flex-start;
+      margin: 1rem 0 0;
+    }
+
+    .navbar-nav .nav-link {
+      padding: 0.75rem 1rem;
+      width: 100%;
+    }
+  }
+</style>
 
   <section class="page-hero-image">
     <img src="img/about/abot bg.webp" alt="Empowering Sri Lanka" class="img-fluid banner-img">
@@ -280,36 +388,39 @@
 <style>
   /**/
 /* Mission & Vision Section */
+/* === Mission & Vision Section === */
 .mission-vision-section {
   background-color: #e6f4f9;
-  padding: 40px 60px 50px;
-  max-width: 100%;
+  padding: 40px 20px 50px;
+  width: 100%;
 }
 
-.mission-vision-row {
+/* Mission & Vision container */
+.mission-vision-section .row {
   display: flex;
-  justify-content: center;
   flex-wrap: wrap;
-  column-gap: 120px;
-  row-gap: 30px;
-  text-align: center;
+  justify-content: center;
+  gap: 30px;
 }
 
+/* Box styling */
 .info-box {
   background-color: white;
   padding: 30px 20px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.08);
   border-radius: 8px;
-  flex: 1 1 360px;
-  max-width: 420px;
-  min-width: 300px;
+  flex: 1 1 300px;
+  max-width: 400px;
+  min-width: 260px;
   transition: transform 0.3s ease;
+  margin: 0 auto;
 }
 
 .info-box:hover {
   transform: translateY(-4px);
 }
 
+/* Button styling */
 .info-btn {
   background: transparent;
   border: 1px solid #001f3f;
@@ -319,8 +430,15 @@
   font-size: 0.9rem;
   margin-bottom: 15px;
   font-family: 'Poppins', sans-serif;
+  transition: all 0.3s ease;
 }
 
+.info-btn:hover {
+  background-color: #001f3f;
+  color: white;
+}
+
+/* Text inside the box */
 .info-text {
   font-style: italic;
   font-size: 0.95rem;
@@ -328,6 +446,49 @@
   font-family: 'Poppins', sans-serif;
   margin-bottom: 0;
 }
+
+/* === Story Section === */
+.our-story {
+  margin-top: 50px;
+  padding: 0 10px;
+}
+
+.story-title {
+  font-size: 1.8rem;
+  font-weight: 700;
+  margin-bottom: 15px;
+  color: #001f3f;
+  font-family: 'Poppins', sans-serif;
+}
+
+.story-desc {
+  font-size: 1rem;
+  color: #333;
+  line-height: 1.6;
+  max-width: 900px;
+  margin: 0 auto;
+  font-family: 'Segoe UI', sans-serif;
+  text-align: justify;
+}
+
+/* === Responsive Fixes === */
+@media (max-width: 768px) {
+  .info-box {
+    flex: 1 1 100%;
+    max-width: 100%;
+  }
+
+  .story-title {
+    font-size: 1.5rem;
+  }
+
+  .story-desc {
+    font-size: 0.95rem;
+    padding: 0 5px;
+    text-align: left;
+  }
+}
+
 
 </style>
 
@@ -605,6 +766,162 @@
   });
 </script>
 
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
+  <!-- Footer -->
+   <footer class="footer-section text-white py-5">
+  <div class="container">
+    <div class="row gy-4">
+      
+      <div class="col-6 col-md-3">
+        <h6 class="fw-bold">Menu</h6>
+        <ul class="list-unstyled">
+          <li><a href="index.html" class="footer-link">Home</a></li>
+          <li><a href="about.html" class="footer-link">About</a></li>
+          <li><a href="directors.html" class="footer-link">Board Of Directors</a></li>
+          <li><a href="fellows.html" class="footer-link">LSF Fellows</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h6 class="fw-bold">Information</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="footer-link">What We Do</a></li>
+          <li><a href="news.html" class="footer-link">News & Insights</a></li>
+          <li><a href="involved.html" class="footer-link">Get Involved</a></li>
+          <li><a href="contact.html" class="footer-link">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h6 class="fw-bold">Information</h6>
+        <ul class="list-unstyled">
+          <li><a href="privacy.html" class="footer-link">Privacy Policy</a></li>
+          <li><a href="about.html" class="footer-link">Terms & Conditions</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3">
+  <h6 class="fw-bold">Information</h6>
+  <p class="mb-1">
+    <a href="tel:+94777374957" class="footer-link">+94-777374957</a>
+  </p>
+  <p class="mb-0">
+    <a href="mailto:contact@opensource.lk" class="footer-link">contact@opensource.lk</a>
+  </p>
+</div>
+
+    </div>
+
+    <div class="d-flex justify-content-center gap-3 mt-4">
+      <a href="#" class="footer-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="footer-icon"><i class="fab fa-linkedin-in"></i></a>
+      <a href="#" class="footer-icon"><i class="fab fa-x-twitter"></i></a>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-center mt-4 small flex-wrap text-center text-md-start">
+      <p class="mb-0">Lanka Software Foundation 2025. All rights reserved.</p>
+      <p class="mb-0 fw-bold">LSF Team</p>
+    </div>
+  </div>
+</footer>
+ <style>
+  .footer-section {
+  background-color: #01579b;
+  color: #ffffff;
+  font-family: 'Segoe UI', sans-serif;
+  padding: 60px 20px 30px;
+}
+
+/* Footer Headings */
+.footer-section h6 {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+/* Footer Links */
+.footer-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-link:hover {
+  color: #cce8ff;
+  text-decoration: underline;
+}
+
+/* Contact Info */
+.footer-section p {
+  margin-bottom: 0.3rem;
+  font-size: 0.9rem;
+}
+
+/* Social Icons */
+.footer-icon {
+  font-size: 1.4rem;
+  color: white;
+  transition: transform 0.3s ease, color 0.3s ease;
+  display: inline-block;
+}
+
+.footer-icon:hover {
+  color: #cce8ff;
+  transform: scale(1.1);
+}
+
+/* Footer Bottom Row */
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  font-size: 0.85rem;
+}
+
+/* Responsive: Stack columns & center items */
+@media (max-width: 768px) {
+  /* Stack footer into two columns instead of one */
+  .footer-section .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .footer-section .row > div {
+    flex: 0 0 48%;
+    max-width: 48%;
+    margin-bottom: 1rem;
+    text-align: left;
+  }
+
+  /* Center social icons */
+  .footer-section .d-flex.justify-content-center {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-top: 20px;
+  }
+
+  /* Footer bottom text align */
+  .footer-bottom {
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+    text-align: center;
+  }
+
+  /* Optional: Center heading if needed */
+  .footer-section h6 {
+    text-align: left;
+  }
+}
+
+ </style>>
 </body>
 </html>
