--- a/privacy.html
+++ b/privacy.html
@@ -146,5 +146,162 @@
     <h2>Contact us</h2>
     <p>If you have any questions about Lanka Software Foundation privacy policy, please do not hesitate to contact us through <a href="mailto:contact@opensource.lk">contact@opensource.lk</a>. We are open to any suggestions that you have!</p>
   </div>
-  </body>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  
+  <!-- Footer -->
+   <footer class="footer-section text-white py-5">
+  <div class="container">
+    <div class="row gy-4">
+      
+      <div class="col-6 col-md-3">
+        <h6 class="fw-bold">Menu</h6>
+        <ul class="list-unstyled">
+          <li><a href="index.html" class="footer-link">Home</a></li>
+          <li><a href="about.html" class="footer-link">About</a></li>
+          <li><a href="directors.html" class="footer-link">Board Of Directors</a></li>
+          <li><a href="fellows.html" class="footer-link">LSF Fellows</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h6 class="fw-bold">Information</h6>
+        <ul class="list-unstyled">
+          <li><a href="#" class="footer-link">What We Do</a></li>
+          <li><a href="news.html" class="footer-link">News & Insights</a></li>
+          <li><a href="involved.html" class="footer-link">Get Involved</a></li>
+          <li><a href="contact.html" class="footer-link">Contact Us</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3">
+        <h6 class="fw-bold">Information</h6>
+        <ul class="list-unstyled">
+          <li><a href="privacy.html" class="footer-link">Privacy Policy</a></li>
+          <li><a href="about.html" class="footer-link">Terms & Conditions</a></li>
+        </ul>
+      </div>
+
+      <div class="col-6 col-md-3">
+  <h6 class="fw-bold">Information</h6>
+  <p class="mb-1">
+    <a href="tel:+94777374957" class="footer-link">+94-777374957</a>
+  </p>
+  <p class="mb-0">
+    <a href="mailto:contact@opensource.lk" class="footer-link">contact@opensource.lk</a>
+  </p>
+</div>
+
+    </div>
+
+    <div class="d-flex justify-content-center gap-3 mt-4">
+      <a href="#" class="footer-icon"><i class="fab fa-facebook-f"></i></a>
+      <a href="#" class="footer-icon"><i class="fab fa-instagram"></i></a>
+      <a href="#" class="footer-icon"><i class="fab fa-linkedin-in"></i></a>
+      <a href="#" class="footer-icon"><i class="fab fa-x-twitter"></i></a>
+    </div>
+
+    <div class="d-flex justify-content-between align-items-center mt-4 small flex-wrap text-center text-md-start">
+      <p class="mb-0">Lanka Software Foundation 2025. All rights reserved.</p>
+      <p class="mb-0 fw-bold">LSF Team</p>
+    </div>
+  </div>
+</footer>
+ <style>
+  .footer-section {
+  background-color: #01579b;
+  color: #ffffff;
+  font-family: 'Segoe UI', sans-serif;
+  padding: 60px 20px 30px;
+}
+
+/* Footer Headings */
+.footer-section h6 {
+  font-size: 1rem;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+/* Footer Links */
+.footer-link {
+  color: #ffffff;
+  text-decoration: none;
+  font-size: 0.9rem;
+  transition: color 0.3s ease;
+  cursor: pointer;
+}
+
+.footer-link:hover {
+  color: #cce8ff;
+  text-decoration: underline;
+}
+
+/* Contact Info */
+.footer-section p {
+  margin-bottom: 0.3rem;
+  font-size: 0.9rem;
+}
+
+/* Social Icons */
+.footer-icon {
+  font-size: 1.4rem;
+  color: white;
+  transition: transform 0.3s ease, color 0.3s ease;
+  display: inline-block;
+}
+
+.footer-icon:hover {
+  color: #cce8ff;
+  transform: scale(1.1);
+}
+
+/* Footer Bottom Row */
+.footer-bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 30px;
+  flex-wrap: wrap;
+  font-size: 0.85rem;
+}
+
+/* Responsive: Stack columns & center items */
+@media (max-width: 768px) {
+  /* Stack footer into two columns instead of one */
+  .footer-section .row {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+
+  .footer-section .row > div {
+    flex: 0 0 48%;
+    max-width: 48%;
+    margin-bottom: 1rem;
+    text-align: left;
+  }
+
+  /* Center social icons */
+  .footer-section .d-flex.justify-content-center {
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 16px;
+    margin-top: 20px;
+  }
+
+  /* Footer bottom text align */
+  .footer-bottom {
+    flex-direction: column;
+    align-items: center;
+    gap: 6px;
+    text-align: center;
+  }
+
+  /* Optional: Center heading if needed */
+  .footer-section h6 {
+    text-align: left;
+  }
+}
+
+ </style>>
+</body>
   </html>
