--- a/about.html
+++ b/about.html
@@ -6,17 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-   
+
   <!-- Swiper CSS -->
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-
-  
-
   <style>
   body {
     margin: 0;
     padding: 0;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Segoe UI', sans-serif;  
   }
 
   /* === HERO BANNER === */
@@ -155,40 +152,7 @@
 
 </head>
 <body>
-  <!-- NAVBAR SECTION -->
-<header class="custom-header">
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
-      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
-
-      <!-- LSF Logo -->
-      <a class="navbar-brand me-auto" href="index.html">
-        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
-      </a>
-
-      <!-- Toggle Button -->
-      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Collapsible Menu -->
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav align-items-center">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
-          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<!-- NAVBAR STYLE -->
-<!-- NAVBAR SECTION -->
+<!----><!-- NAVBAR SECTION -->
 <header class="custom-header">
   <nav class="navbar navbar-expand-lg fixed-top">
     <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
@@ -922,6 +886,6 @@
   }
 }
 
- </style>>
+ </style>
 </body>
 </html>
