--- a/directors.html
+++ b/directors.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Bord Of Directors-LSF</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
+
   <!-- NAVBAR SECTION -->
 <header class="custom-header">
   <nav class="navbar navbar-expand-lg fixed-top">
@@ -138,6 +140,116 @@
     </div>
   </section>
   <!---->
+<section class="team-section py-5">
+  <div class="container text-center">
+    <p class="section-subtitle text-primary fw-semibold">Team members</p>
+    <h2 class="fw-bold mb-3">Leading Digital Transformation</h2>
+    <p class="mb-5 text-muted">Our board ensures strategic innovation and impactful governance.</p>
+
+    <div class="row gy-4">
+      <!-- Member 1 -->
+      <div class="col-md-4">
+        <div class="team-card position-relative">
+          <img src="img/about/people (2).webp" alt="Paul Biondich" class="img-fluid rounded team-img">
+          <a href="https://linkedin.com" target="_blank" class="linkedin-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <h5 class="mt-3 fw-bold">Dr. Paul G. Biondich</h5>
+          <p class="text-muted small">Global Digital Health Expert</p>
+        </div>
+      </div>
+
+      <!-- Member 2 -->
+      <div class="col-md-4">
+        <div class="team-card position-relative">
+          <img src="img/about/people (1).webp" alt="Sanjiva" class="img-fluid rounded team-img">
+          <a href="https://linkedin.com" target="_blank" class="linkedin-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <h5 class="mt-3 fw-bold">Dr. Sanjiva Weerawarana</h5>
+          <p class="text-muted small">Founder, Open-source visionary</p>
+        </div>
+      </div>
+
+      <!-- Member 3 -->
+      <div class="col-md-4">
+        <div class="team-card position-relative">
+          <img src="img/about/people (3).webp" alt="Kasturi" class="img-fluid rounded team-img">
+          <a href="https://linkedin.com" target="_blank" class="linkedin-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <h5 class="mt-3 fw-bold">Ms. Kasturi Chellaraja</h5>
+          <p class="text-muted small">Corporate leader, governance expert</p>
+        </div>
+      </div>
+
+      <!-- Member 4 -->
+      <div class="col-md-4">
+        <div class="team-card position-relative">
+          <img src="img/about/people (5).webp" alt="Ruvan" class="img-fluid rounded team-img">
+          <a href="https://linkedin.com" target="_blank" class="linkedin-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <h5 class="mt-3 fw-bold">Dr. Ruvan Weerasinghe</h5>
+          <p class="text-muted small">AI & NLP Researcher</p>
+        </div>
+      </div>
+
+      <!-- Member 5 -->
+      <div class="col-md-4">
+        <div class="team-card position-relative">
+          <img src="img/about/people (4).webp" alt="Sanduni" class="img-fluid rounded team-img">
+          <a href="https://linkedin.com" target="_blank" class="linkedin-icon">
+            <i class="fab fa-linkedin-in"></i>
+          </a>
+          <h5 class="mt-3 fw-bold">Ms. Sanduni Wickramasinghe</h5>
+          <p class="text-muted small">Privacy & Data Protection Specialist</p>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<style>
+  .team-section {
+  background-color: #e9f6fc;
+}
+
+.team-card {
+  background-color: transparent;
+}
+
+.team-img {
+  border-radius: 12px;
+  object-fit: cover;
+  width: 100%;
+  aspect-ratio: 1/1;
+  position: relative;
+}
+
+.linkedin-icon {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: rgba(255, 255, 255, 0);
+  color: #0077b5;
+  font-size: 18px;
+  padding: 6px;
+  transition: transform 0.2s ease;
+}
+
+.linkedin-icon:hover {
+  transform: scale(1.15);
+  color: #005f99;
+}
+
+.section-subtitle {
+  font-size: 0.95rem;
+  letter-spacing: 0.5px;
+}
+
+</style>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Footer -->
    <footer class="footer-section text-white py-5">
@@ -293,6 +405,6 @@
   }
 }
 
- </style>>
+ </style>
   </body>
   </html>
