--- a/fellows.html
+++ b/fellows.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>LSF Fellows</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
    <style>
     body {
       background-color: #e9f6fc;
@@ -704,6 +704,6 @@
   }
 }
 
- </style>>
+ </style>
 </body>
 </html>
