--- a/index.html
+++ b/index.html
@@ -21,42 +21,25 @@
     .grow-on-hover:hover {
       transform: scale(1.02);
     }
+    @media (max-width: 768px) {
+  .hero-section, .strategic-section, .fellow-section {
+    padding: 40px 10px !important;
+  }
+
+  .section-heading {
+    font-size: 1.8rem;
+    text-align: center;
+  }
+
+  .section-description {
+    text-align: center;
+  }
+}
+
   </style>
 </head>
 <body>
-<!-- NAVBAR SECTION -->
-<header class="custom-header">
-  <nav class="navbar navbar-expand-lg fixed-top">
-    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
-      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
 
-      <!-- LSF Logo -->
-      <a class="navbar-brand me-auto" href="index.html">
-        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
-      </a>
-
-      <!-- Toggle Button -->
-      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-
-      <!-- Collapsible Menu -->
-      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
-        <ul class="navbar-nav align-items-center">
-          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
-          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
-          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
-          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-</header>
-
-<!-- NAVBAR STYLE -->
 <!-- NAVBAR SECTION -->
 <header class="custom-header">
   <nav class="navbar navbar-expand-lg fixed-top">
@@ -320,6 +303,14 @@
     transform: translateX(-50%);
   }
   }
+  @media (max-width: 768px) {
+  .scroll-box {
+    min-width: 250px;
+    height: auto;
+    padding: 20px 10px;
+  }
+}
+
 </style>
       </div>
       </div>
@@ -416,8 +407,19 @@
   box-shadow: 0 0 8px rgba(0, 0, 0, 0.05);
   height: 100%;
 }
+@media (max-width: 768px) {
+  .fellow-section .text-start {
+    text-align: center !important;
+  }
 
+  .fellow-section img {
+    margin-top: 20px;
+  }
 
+  .hero-section .text-start {
+    text-align: center !important;
+  }
+}
 </style>
 <!--section 4 - lsf logo-->
 <section class="lsf-banner-section">
@@ -561,6 +563,23 @@
   font-size: 1.2rem;
   font-weight: bold;
   transition: transform 0.2s;
+}
+@media (max-width: 768px) {
+  .carousel-item .col-md-4 {
+    flex: 0 0 100%;
+    max-width: 100%;
+    margin-bottom: 20px;
+  }
+
+  .carousel-item .row {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .faq-section h2 {
+    font-size: 1.5rem;
+    text-align: center;
+  }
 }
 
 </style>
@@ -923,6 +942,7 @@
     </div>
   </div>
 </footer>
+
  <style>
   .footer-section {
   background-color: #01579b;
@@ -1019,7 +1039,7 @@
   }
 }
 
- </style>>
+ </style>
   
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
