--- a/involved.html
+++ b/involved.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Get Involved - LSF</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 
  <style>
    body {
@@ -328,6 +329,45 @@
     margin: 0 auto 10px;
   }
 }
+/* === FIX TIMELINE ON SMALL SCREENS === */
+@media (max-width: 768px) {
+  .timeline-item {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .timeline-left {
+    flex-direction: row;
+    align-items: center;
+    margin: 0 0 10px 0;
+    gap: 10px;
+    transform: none;
+    justify-content: center;
+  }
+
+  .timeline-content {
+    width: 100%;
+    text-align: center;
+    padding: 20px 15px;
+  }
+
+  .timeline-content h3 {
+    font-size: 1.1rem;
+  }
+
+  .btn-group {
+    justify-content: center;
+  }
+
+  .line {
+    display: none;
+  }
+
+  .number-block img {
+    width: 60px;
+  }
+}
+
 
 </style>
 </head>
@@ -817,6 +857,6 @@
   }
 }
 
- </style>>
+ </style>
 </body>
 </html>
