--- a/privacy.html
+++ b/privacy.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Privacy Policy-LSF</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
   <style>
     /* === HERO BANNER === */
   .page-hero-image {
@@ -38,49 +39,85 @@
   font-family: 'Poppins', sans-serif;
   text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.5);
 }
-/*tests section*/
-   body {
-      background-color: #e6f6fc;
-      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-      color: #222;
-    }
-    .container {
-      max-width: 900px;
-      padding: 40px 20px;
-    }
-    h2 {
-      margin-top: 40px;
-      font-size: 1.8rem;
-    }
-    h3 {
-      margin-top: 30px;
-      font-size: 1.5rem;
-    }
-    ul li {
-      margin-bottom: 0.4rem;
-    }
-    footer {
-      background-color: #003f7f;
-      color: #fff;
-      padding: 40px 20px;
-    }
-    footer a {
-      color: #ffffff;
-      text-decoration: none;
-    }
-    footer a:hover {
-      text-decoration: underline;
-    }
-    .footer-menu {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2rem;
-      justify-content: space-between;
-    }
   </style>
 
   </head>
   <body>
+    <!-- NAVBAR SECTION -->
+<header class="custom-header">
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container py-2 px-4 d-flex justify-content-between align-items-center"
+      style="width: 100%; max-width: 1140px; margin: 10px auto; border-radius: 50px; background-color: #ffffffd9; border: 1px solid #d0e8ff;">
+
+      <!-- LSF Logo -->
+      <a class="navbar-brand me-auto" href="index.html">
+        <img src="img/home/headlogo.webp" alt="LSF Logo" height="40">
+      </a>
+
+      <!-- Toggle Button -->
+      <button class="navbar-toggler border-0" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <!-- Collapsible Menu -->
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav align-items-center">
+          <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="projects.html">Projects</a></li>
+          <li class="nav-item"><a class="nav-link" href="fellows.html">Fellows</a></li>
+          <li class="nav-item"><a class="nav-link" href="involved.html">Get Involved</a></li>
+          <li class="nav-item"><a class="nav-link" href="contact.html">Contact Us</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
+<!-- NAVBAR STYLE -->
+<style>
+  .navbar-nav .nav-link {
+    color: #333;
+    font-weight: 500;
+    text-decoration: none;
+    padding: 0.5rem;
+    transition: color 0.2s ease, transform 0.2s ease;
+  }
+
+  .navbar-nav .nav-link:hover {
+    color: #0d6efd;
+    transform: scale(1.07);
+  }
+
+  .navbar-brand img {
+    height: 40px;
+  }
+  .navbar-toggler:focus,
+  .navbar-toggler:active {
+  outline: none !important;
+  box-shadow: none !important;
+}
+
+
+  @media (max-width: 991.98px) {
+    .navbar {
+      border-radius: 0 0 20px 20px;
+    }
+
+    .navbar-nav {
+      flex-direction: column;
+      align-items: flex-start;
+      margin: 1rem 0 0;
+    }
+
+    .navbar-nav .nav-link {
+      padding: 0.75rem 1rem;
+      width: 100%;
+    }
+  }
+</style>
+
     <!--blue banner-->
     <section class="page-hero-image">
     <img src="img/about/abot bg.webp" alt="Empowering Sri Lanka" class="img-fluid banner-img">
@@ -146,8 +183,25 @@
     <h2>Contact us</h2>
     <p>If you have any questions about Lanka Software Foundation privacy policy, please do not hesitate to contact us through <a href="mailto:contact@opensource.lk">contact@opensource.lk</a>. We are open to any suggestions that you have!</p>
   </div>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  
+<style>
+   
+    .container {
+      max-width: 900px;
+      padding: 40px 20px;
+    }
+    h2 {
+      margin-top: 40px;
+      font-size: 1.8rem;
+    }
+    h3 {
+      margin-top: 30px;
+      font-size: 1.5rem;
+    }
+    ul li {
+      margin-bottom: 0.4rem;
+    }
+</style>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   <!-- Footer -->
    <footer class="footer-section text-white py-5">
   <div class="container">
@@ -302,6 +356,6 @@
   }
 }
 
- </style>>
-</body>
+ </style>
+  </body>
   </html>
