--- a/index.html
+++ b/index.html
@@ -310,12 +310,10 @@
     padding: 20px 10px;
   }
 }
-
 </style>
-      </div>
-      </div>
-    </div>
-  </section>
+      </div> </div> </div>
+      </section>
+      
 <!-- sectionn 3-->
  <section class="fellow-section py-5">
   <div class="container">
